crates/test-files/fixtures/compile_errors/external_call_wrong_number_of_params.fe
contract Foo:
    pub def bar(a: u256, b: u256):
        pass

contract FooProxy:
    pub def baz():
        Foo(address(0)).bar(42)